fixed stopwatch starting logic and few ui fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/design/all.js"></script> <!--load all styles -->
   <script defer src="./js/design/icons.js"></script> <!--load all styles -->
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   <title>Document</title>
@@ -90,10 +91,10 @@
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
   </script> -->
+  <script src="./js/design/stopwatch.js" defer></script>
   <script src="./js/gamelogic/config.js" defer></script>
   <script src="./js/gamelogic/utils.js" defer></script>
   <script src="./js/gamelogic/main.js" defer></script>
-  <script src="./js/design/stopwatch.js" defer></script>
 
 </body>
 </html>
