--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-  <title>Document</title>
+  <title>Image Match</title>
 </head>
 <body>
 
