fix phone size and fixed logic for clicks now done after the board hidden

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/stopwatch.css">
   <link rel="stylesheet" href="./css/form.css">
@@ -10,7 +10,6 @@
   <script defer src="./js/design/all.js"></script> <!--load all styles -->
   <script defer src="./js/design/icons.js"></script> <!--load all styles -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   <title>Image Match</title>
