asking for email

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="container">
            <!-- <h1>Login</h1> -->
             <form>
-                <input id="email" type="text" placeholder="Name" onfocus="this.placeholder = ''"
-                onblur="this.placeholder = 'Name'" >
+                <input id="email" type="email" placeholder="Email" onfocus="this.placeholder = ''"
+                onblur="this.placeholder = 'Email'" >
                 <a href="#" class="round-button"><i class="fa fa-play fa-1x"></i></a>
             </form>
         </div>
